<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".loginForm">

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/email_login" android:layout_marginTop="212dp"
            app:layout_constraintTop_toTopOf="parent" android:hint="@string/email"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/pass_login" android:layout_marginTop="60dp"
            app:layout_constraintTop_toBottomOf="@+id/email_login" android:hint="@string/password"/>
    <Button
            android:text="@string/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/login" android:layout_marginTop="85dp"
            app:layout_constraintTop_toBottomOf="@+id/pass_login" app:layout_constraintHorizontal_bias="0.498"/>
    <TextView
            android:text="@string/acc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="reg"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/create-acc" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/login" android:textColor="@color/Secondarytext"/>
</android.support.constraint.ConstraintLayout>